<?xml version="1.0"?>
<package format="2">
  <name>voxelslam_to_hdmapping</name>
  <version>0.0.1</version>
  <description>Convert recorded Voxel-SLAM odometry bag to HDMapping session format</description>
  <maintainer email="januszbedkowski@gmail.com">Janusz Bedkowski</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>rosbag</depend>
  <depend>pcl_conversions</depend>
</package>
